# raytracingcamp9

./: CMakeLists.txt  GenerateVS2022Solution.bat  main.cpp  rt9_renderer.pptx  util.h
